laborations/lab2/testsuite/good/separate-namespaces.cc
int x() { return 0; }

int main() {
  int x = 5;
  return x;
}
