laborations/lab2/testsuite/bad/bad001.cc
int main() {
	int x, y;
	{
		int y;
	}
	int x;
	return 0;
}
